--- a/ncook3-solution-base.ipynb
+++ b/ncook3-solution-base.ipynb
@@ -244,6 +244,9 @@
   }
  ],
  "metadata": {
+  "jupytext": {
+   "formats": "ipynb,py"
+  },
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
