Minor tweaks for formatting

--- a/ncook3-solution-base.ipynb
+++ b/ncook3-solution-base.ipynb
@@ -36,22 +36,8 @@
       "\u001b[41mS\u001b[0mFFF\n",
       "FHFH\n",
       "FFFH\n",
-      "HFFG\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[(1.0, 15, 1, True)]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "HFFG\n",
+      "[(1.0, 15, 1, True)]\n",
       "0  0  0  0  \n",
       "0  0  0  0  \n",
       "0  0  0  0  \n",
@@ -139,21 +125,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5.78 ms ± 186 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
-     ]
-    }
-   ],
    "source": [
+    "```\n",
     "%%timeit\n",
-    "V = a4.valueIteration(env, epsilon=epsilon, gamma=gamma, max_iter=max_iter, report=False)"
+    "V, epochs = a4.valueIteration(env, epsilon=epsilon, gamma=gamma, max_iter=max_iter, report=False)\n",
+    "```\n",
+    "\n",
+    "6.38 ms ± 658 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)"
    ]
   },
   {
