--- a/ncook3-solution-base.ipynb
+++ b/ncook3-solution-base.ipynb
@@ -13,7 +13,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import cs7641assn4 as a4"
+    "import cs7641assn4 as a4\n",
+    "from numpy import argmax"
    ]
   },
   {
@@ -32,39 +33,55 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "--Board--\n",
       "\n",
-      "\u001b[41mS\u001b[0mFFF\n",
-      "FHFH\n",
-      "FFFH\n",
-      "HFFG\n",
-      "[(1.0, 15, 1, True)]\n",
-      "0  0  0  0  \n",
-      "0  0  0  0  \n",
-      "0  0  0  0  \n",
-      "0  0  0  1  \n"
+      "\u001b[41mS\u001b[0m  F  F  F\n",
+      "F  H  F  H\n",
+      "F  F  F  H\n",
+      "H  F  F  G\n",
+      "\n",
+      "--Actions for Position to the Left of the Goal--\n",
+      "{0: [(1.0, 13, -0.2, False)],\n",
+      " 1: [(1.0, 14, -0.2, False)],\n",
+      " 2: [(1.0, 15, 1, True)],\n",
+      " 3: [(1.0, 10, -0.2, False)]}\n",
+      "\n",
+      "--Reward Values at Each State--\n",
+      "-0.2  -0.2  -0.2  -0.2  \n",
+      "-0.2    -1  -0.2    -1  \n",
+      "-0.2  -0.2  -0.2    -1  \n",
+      "  -1  -0.2  -0.2     1  \n"
      ]
     }
    ],
    "source": [
     "id = 'Deterministic-4x4-FrozenLake-v0' # string identifier for environment, arbitrary label\n",
-    "rH = 0 #-5 # reward for H(ole)\n",
+    "rH = -1 #-5 # reward for H(ole)\n",
     "rG = 1 # 10 # reward for G(oal)\n",
-    "rF = 0 # reward includes S(tart) and F(rozen)\n",
+    "rF = -0.2# reward includes S(tart) and F(rozen)\n",
     "size = 4 # height and width of square gridworld\n",
     "p = 0.8 # if generating a random map probability that a grid will be F(rozen)\n",
     "desc = None # frozen_lake.generate_random_map(size=size, p=p)\n",
     "map_name = 'x'.join([str(size)]*2) # None\n",
     "is_slippery = False\n",
     "\n",
+    "\n",
     "epsilon = 1e-8 # convergence threshold for policy/value iteration\n",
     "gamma = 0.8 # discount parameter for past policy/value iterations\n",
     "max_iter = 10000 # maximum iterations for slowly converging policy/value iteration \n",
     "\n",
+    "# Qlearning(env, rH=0, rG=1, rF=0, qepsilon=0.1, lr=0.8, gamma=0.95, episodes=10000)\n",
+    "qepsilon = 0.1 # epsilon value for the Q-learning epsilon greedy strategy\n",
+    "lr = 0.8 # Q-learning rate\n",
+    "qgamma = 0.95 # Q-Learning discount factor\n",
+    "episodes = 10000 # number of Q-learning episodes\n",
+    "\n",
     "# Create Environment\n",
-    "env = a4.getEnv(id=id,render_initial=True)\n",
+    "env = a4.getEnv(id=id, rH=rH, rG=rG, rF=rF, desc=desc, map_name=map_name, is_slippery=is_slippery,render_initial=True)\n",
     "\n",
     "# Display reward at each state\n",
-    "a4.matprint(a4.print_value(a4.getStateReward(env)))"
+    "print('\\n--Reward Values at Each State--')\n",
+    "a4.matprint(a4.print_value(a4.getStateReward(env),width=size,height=size))"
    ]
   },
   {
@@ -95,15 +112,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Policy iteration converged after  4 epochs\n",
-      "0.0772   0.078  0.1372  0.0784  \n",
-      "0.1343       0  0.2989       0  \n",
-      "0.2921  0.6689  0.9837       0  \n",
-      "     0  1.2327   2.721       5  \n",
-      "↓  ↑  →  ↑  \n",
-      "←  ←  ←  ←  \n",
-      "↑  ↓  ←  ←  \n",
-      "←  →  ↓  ←  \n"
+      "Policy iteration converged after  7 epochs\n",
+      "0.9661  1.4576  2.072  1.4576  \n",
+      "1.4576      -5   2.84      -5  \n",
+      " 2.072    2.84    3.8      -5  \n",
+      "    -5     3.8      5       5  \n",
+      "↓  →  ↓  ←  \n",
+      "↓  ←  ↓  ←  \n",
+      "→  ↓  ↓  ←  \n",
+      "←  →  →  ←  \n"
      ]
     }
    ],
@@ -138,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -147,15 +164,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Value iteration converged after  87 epochs\n",
-      "0.0772   0.078  0.1372  0.0784  \n",
-      "0.1343       0  0.2989       0  \n",
-      "0.2921  0.6689  0.9837       0  \n",
-      "     0  1.2327   2.721       5  \n",
-      "→  ↑  →  ↑  \n",
-      "←  ←  ←  ←  \n",
-      "↑  ↓  ←  ←  \n",
-      "←  →  ↓  ←  \n"
+      "Value iteration converged after  91 epochs\n",
+      "0.9661  1.4576  2.072  1.4576  \n",
+      "1.4576      -5   2.84      -5  \n",
+      " 2.072    2.84    3.8      -5  \n",
+      "    -5     3.8      5       5  \n",
+      "↓  →  ↓  ←  \n",
+      "↓  ←  ↓  ←  \n",
+      "→  ↓  ↓  ←  \n",
+      "←  →  →  ←  \n"
      ]
     }
    ],
@@ -165,10 +182,80 @@
     "# display value function:\n",
     "a4.matprint(a4.print_value(V))\n",
     "\n",
-    "pol = a4.value_to_policy(env, gamma=gamma, V=V)\n",
+    "pol = a4.value_to_policy(env, V=V, gamma=gamma)\n",
     "\n",
     "# display policy\n",
     "a4.matprint(a4.print_policy(pol, width=size, height=size))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Q-Learning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--Q with all options--\n",
+      "0.373797  0.603997   0.603997   0.373797  \n",
+      "0.373797     -1.95   0.846312   0.603589  \n",
+      "0.594355   1.10138   0.603991   0.839005  \n",
+      "0.846312     -1.56  -0.602614  -0.602614  \n",
+      "0.603997  0.846312      -1.95   0.373797  \n",
+      "      -1        -1         -1         -1  \n",
+      "-1.94998   1.36987      -1.95   0.846309  \n",
+      "      -1        -1         -1         -1  \n",
+      "0.846312     -1.95    1.10138   0.603997  \n",
+      "0.846312   1.36987    1.36987      -1.95  \n",
+      " 1.10138    1.6525      -1.95    1.10138  \n",
+      "      -1        -1         -1         -1  \n",
+      "      -1        -1         -1         -1  \n",
+      "   -1.95   1.36987     1.6525    1.10138  \n",
+      " 1.36987    1.6525       1.95    1.36987  \n",
+      "       1         1          1          1  \n",
+      "\n",
+      "--argmax(Q) in grid order--\n",
+      " 0.604  0.8463  1.1014  0.8463  \n",
+      "0.8463      -1  1.3699      -1  \n",
+      "1.1014  1.3699  1.6525      -1  \n",
+      "    -1  1.6525    1.95       1  \n",
+      "\n",
+      "--Final position--\n",
+      "  (Right)\n",
+      "S  F  F  F\n",
+      "F  H  F  H\n",
+      "F  F  F  H\n",
+      "H  F  F  \u001b[41mG\u001b[0m\n",
+      "Agent ended up at state 15 after 6 steps\n",
+      "\n",
+      "--Policy Matrix--\n",
+      "↓  →  ↓  ←  \n",
+      "↓  ←  ↓  ←  \n",
+      "→  ↓  ↓  ←  \n",
+      "←  →  →  ←  \n"
+     ]
+    }
+   ],
+   "source": [
+    "Q = a4.Qlearning(env, qepsilon, lr, qgamma, episodes)\n",
+    "print('--Q with all options--')\n",
+    "a4.matprint(Q)\n",
+    "\n",
+    "maxQ = Q[range(len(Q)),argmax(Q,axis=1)]\n",
+    "print('\\n--argmax(Q) in grid order--')\n",
+    "a4.matprint(a4.print_value(maxQ))\n",
+    "\n",
+    "s, steps = a4.Qlearning_trajectory(env, Q, render=False)\n",
+    "print('\\n--Policy Matrix--')\n",
+    "a4.matprint(a4.policy_matrix(Q))"
    ]
   },
   {
@@ -201,10 +288,10 @@
     "\n",
     "|ACTION|Value|Symbol|\n",
     "|------|-----|------|\n",
-    "|LEFT|0|←|\n",
-    "|DOWN | 1|↓|\n",
-    "|RIGHT | 2|→|\n",
-    "|UP | 3| ↑|"
+    "|LEFT  | 0   | ←    |\n",
+    "|DOWN  | 1   | ↓    |\n",
+    "|RIGHT | 2   | →    |\n",
+    "|UP    | 3   | ↑    |"
    ]
   },
   {
